--- a/Index.html
+++ b/Index.html
@@ -10,105 +10,233 @@
     <script src="https://kit.fontawesome.com/a6b9797a79.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header id="body-header">
-    <nav>
 
-        <ul class="horizontal-list text-center nav-menu">
-            <li>
-                <a href="#"> Home </a>
-            </li>
-            <li>
-                <a href="#about"> About </a>
-            </li>
-            <li>
-                <a href="#skills"> Skills </a>
-            </li>
-            <li>
-                <a href="#experience">Experience</a>
-            </li>
-            <li>
-                <a href="#education">Education</a>
-            </li>
-            <li>
-                <a href="#portfolio">Portfolio</a>
-            </li>
-            <li>
-                <a href="#contact">Contact</a>
-            </li>
-        </ul>
-        
-    </nav>
+    <header id="body-header">
+        <nav>
 
-    <div id="name-social-container">
-        <div class="text-center">
-            <h1 id="my-name">
-                My Name
-            </h1>
-        </div>
-        <div>
-            <ul class="horizontal-list text-center social-icons">
+            <ul class="horizontal-list text-center nav-menu">
                 <li>
-                    <a href="#">
-                        <i class="fa-brands fa-linkedin"></i>
-                    </a>
+                    <a href="#"> Home </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <i class="fa-brands fa-stack-overflow"></i>
-                    </a>
+                    <a href="#about"> About </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <i class="fa-brands fa-google-plus-g"></i>
-                    </a>
+                    <a href="#skills"> Skills </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <i class="fa-brands fa-facebook"></i>
-                    </a>
+                    <a href="#experience">Experience</a>
                 </li>
                 <li>
-                    <a href="#">
-                        <i class="fa-brands fa-quora"></i>
-                    </a>
+                    <a href="#education">Education</a>
+                </li>
+                <li>
+                    <a href="#portfolio">Portfolio</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
                 </li>
             </ul>
 
+        </nav>
+
+        <div id="name-social-container">
+            <div class="text-center">
+                <h1 id="my-name">
+                    My Name
+                </h1>
+            </div>
+            <div>
+                <ul class="horizontal-list text-center social-icons">
+                    <li>
+                        <a href="#">
+                            <i class="fa-brands fa-linkedin"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa-brands fa-stack-overflow"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa-brands fa-google-plus-g"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa-brands fa-quora"></i>
+                        </a>
+                    </li>
+                </ul>
+
+            </div>
+
         </div>
 
-    </div>
-</header>
-<main>
+    </header>
+    <main>
 
-    <section id="about">
-        <div id="my-image">
-            <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000020_1549743985_macbook_mouse.jpg">
-        </div>
-        <p> Lorem Ipsum is simply dummy text of the printing and <snap>typesetting industry.</snap> Lorem Ipsum has been the industry's standard <snap>dummy text ever</snap> since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s <snap>with the release of Letraset</snap> sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
+        <section id="about">
+            <div id="my-image">
+                <img src="image/img6.jpg">
+            </div>
 
-    </section>
+            <div id="about-para">
 
-    <section id="skills">
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and <span class="text-highlight">typesetting industry</span>. Lorem Ipsum has been the industry's standard <span class="text-highlight">dummy text ever</span> since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s <span class="text-highlight">with the release of Letraset</span> sheets containing Lorem Ipsum.
+                </p>
 
-    </section>
+            </div>
 
-    <section id="experience">
+        </section>
 
-    </section>
 
-    <section id="education">
 
-    </section>
+        <section id="skills">
+            <h1 class="section-heading mb75px ">
+                <span>
+                    <i class="fas fa-chalkboard-teacher"></i>
+                </span>
+                <span> SKILLS </span>
+            </h1>
 
-    <section id="portfolio">
+            <div class="skills-display">
 
-    </section>
+                <div class="skill-progress">
+                    <div class="fifty-percent mb-blue">
+                        <div class="skill-name">
+                            <span> C++ </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="eighty-five-percent mb-orange">
+                        <div class="skill-name">
+                            <span> HTML </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="eighty-percent mb-light-purple">
+                        <div class="skill-name">
+                            <span> CSS </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="fifty-percent mb-teal">
+                        <div class="skill-name">
+                            <span> Javascript </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="fifty-percent mb-blue">
+                        <div class="skill-name">
+                            <span> NodeJs </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="eighty-percent mb-light-purple">
+                        <div class="skill-name">
+                            <span> MongoDB </span>
+                        </div>
+                    </div>
+                </div>
 
-    <section id="contact">
+            </div>
 
-    </section>
+        </section>
 
-</main>
+        <section id="experience">
+
+        </section>
+
+        <section id="education">
+
+        </section>
+
+        <section id="portfolio">
+            <h1 class="section-heading mb75px">
+                <span>
+                    <i class="fas fa-th-list"></i>
+                </span>
+                <span> Portfolio </span>
+            </h1>
+
+            <div id="portfolio-container">
+
+                <div class="portfolio-image-container">
+                    <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000025_1550237330_codezen_2.png">
+                    <div class="portfolio-details">
+                        <p>
+                            Write here basic details about the project.
+                        </p>
+                    </div>
+
+                </div>
+                <div class="portfolio-image-container">
+                    <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000025_1550237330_codezen_2.png">
+                    <div class="portfolio-details">
+                        <p>
+                            Write here basic details about the project.
+                        </p>
+                    </div>
+
+                </div>
+                <div class="portfolio-image-container">
+                    <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000025_1550237330_codezen_2.png">
+                    <div class="portfolio-details">
+                        <p>
+                            Write here basic details about the project.
+                        </p>
+                    </div>
+
+                </div>
+                <div class="portfolio-image-container">
+                    <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000024_1550237299_codezen.png">
+                    <div class="portfolio-details">
+                        <p>
+                            Write here basic details about the project.
+                        </p>
+                    </div>
+
+                </div>
+                <div class="portfolio-image-container">
+                    <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000024_1550237299_codezen.png">
+                    <div class="portfolio-details">
+                        <p>
+                            Write here basic details about the project.
+                        </p>
+                    </div>
+
+                </div>
+                <div class="portfolio-image-container">
+                    <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000024_1550237299_codezen.png">
+                    <div class="portfolio-details">
+                        <p>
+                            Write here basic details about the project.
+                        </p>
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+
+        <section id="contact">
+
+        </section>
+
+    </main>
 
 </body>
 </html>
